@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-07T01:12:04Z",
-  "count_outdated" : 2901,
-  "uniques_outdated" : 933,
+  "timestamp" : "2025-01-07T12:31:00Z",
+  "count_outdated" : 2902,
+  "uniques_outdated" : 934,
   "count" : 2909,
   "uniques" : 940,
   "views" : [
-    {
-      "timestamp": "2024-12-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-26T00:00:00Z",
       "count": 1,
